Fix alert dialog width on IE8.

--- a/scss/modals/_alert.scss
+++ b/scss/modals/_alert.scss
@@ -2,6 +2,7 @@
 
 .alert {
     .guts {
+        width: 450px;
         max-width: 450px;
         background-color: $body-background-color;
         padding: 18px 15px 10px 18px;
